// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldName renders a custom description icon 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer emotion-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis2"
        >
          <span
            data-euiicon-type="tokenString"
            title="String"
          >
            String
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
        >
          <span>
            test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders a geo field 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer emotion-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis8"
        >
          <span
            data-euiicon-type="tokenGeo"
            title="Geo point"
          >
            Geo point
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test.test.test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
        >
          <span>
            test.test.test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders a number field by providing a field record 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer emotion-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
        >
          <span
            data-euiicon-type="tokenNumber"
            title="Number"
          >
            Number
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test.test.test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
        >
          <span>
            test.test.test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders a string field by providing fieldType and fieldName 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer emotion-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis2"
        >
          <span
            data-euiicon-type="tokenString"
            title="String"
          >
            String
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
        >
          <span>
            test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders unknown field 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer emotion-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon emotion-euiToken-circle-light-s-gray"
        >
          <span
            data-euiicon-type="questionInCircle"
            title="Unknown field"
          >
            Unknown field
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test.test.test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
        >
          <span>
            test.test.test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders when mapping is provided 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer emotion-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
        >
          <span
            data-euiicon-type="tokenNumber"
            title="Number"
          >
            Number
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
        >
          <span>
            bytes
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldName renders with a search highlight 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-flexStart-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup kbnDocViewer__fieldIconContainer emotion-euiFlexGroup-s-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
        >
          <span
            data-euiicon-type="tokenNumber"
            title="Number"
          >
            Number
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-none-flexStart-center-row"
    >
      <div
        class="euiFlexItem kbnDocViewer__fieldName eui-textBreakAll emotion-euiFlexItem-growZero"
        data-test-subj="tableDocViewRow-test.test.test-name"
      >
        <span
          class="euiToolTipAnchor eui-textBreakAll emotion-euiToolTipAnchor-inlineBlock"
        >
          <span>
            <mark
              class="euiMark emotion-euiMark-hasScreenReaderHelpText"
            >
              te
            </mark>
            st.test.test
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
